# akingbee

./: .coverage  .coveragerc  .dockerignore  .eslintrc.json  .gitignore  .golangci.yaml  .travis.yml  CLAUDE.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  __init__.py  akingbee.go  akingbee.local.db  akingbee.prod.db  app.py  config.py  config.toml  database.db  docker-compose.yml  environment.yaml  go.mod  go.sum  helpers.py  justfile  listener.py  package-lock.json  package.json  plans.md  pyproject.toml  requirements.txt  script.py  shell.nix  uwsgi.ini
aristaeus/: .flake8  .pylintrc  .releaserc.json  CHANGELOG.md  Dockerfile  Dockerfile.old  config.toml  config.yaml  justfile  pyproject.toml  sub.py
aristaeus/aristaeus/: app.py  injector.py  listener.py
aristaeus/aristaeus/api/v1/: __init__.py
aristaeus/aristaeus/consumer/: constants.py  handlers.py
aristaeus/aristaeus/controllers/consumers/: zeromq.py
aristaeus/aristaeus/domain/commands/: apiary.py  comment.py  event.py  hive.py  parameter.py  user.py
aristaeus/aristaeus/domain/entities/: apiary.py  comment.py  event.py  harvest.py  hive.py  parameter.py  swarm.py  user.py
aristaeus/aristaeus/domain/listeners/: __init__.py  comment.py  user.py
aristaeus/aristaeus/domain/queries/: event.py  hive.py  parameter.py
aristaeus/aristaeus/domain/services/: apiary.py  event.py  unit_of_work.py
aristaeus/aristaeus/helpers/: authentication.py  common.py  models.py
aristaeus/aristaeus/infrastructure/: __init__.py
aristaeus/aristaeus/infrastructure/db/: session.py  utils.py
aristaeus/aristaeus/models/: __init__.py
aristaeus/migrations/: env.py
aristaeus/migrations/versions/: 4ff9a4c23805_initial_migration.py  7d2caa82eeff_add_harvest_model.py  95891afca307_test.py  9a9309eb386b_hive_swarm_on_delete_clause.py  efd4c6888637_change_owner_id_to_owner.py  f998571c548b_add_harvest_model.py
aristaeus/scripts/: entrypoint.sh
aristaeus/src/aristaeus/: dispatcher.py
aristaeus/src/aristaeus/config/: __init__.py
aristaeus/src/aristaeus/controllers/: __init__.py
aristaeus/tests/: conftest.py  factories.py
aristaeus/tests/api/: test_apiary.py  test_base.py  test_comment.py  test_event.py  test_hive.py  test_swarm.py
aristaeus/tests/consumers/: test_users.py
aristaeus/tests/integration/: conftest.py
aristaeus/tests/unit/: conftest.py
cerbes/: .releaserc.json  Cargo.toml  Dockerfile  config.yaml  justfile  meltingpot  pyproject.toml
cerbes/.cargo/: config.toml
cerbes/cerbes/: app.py  helpers.py  views.py
cerbes/cerbes/models/: __init__.py  base.py  credentials.py  permissions.py  users.py
cerbes/config/: local.toml  test.toml
cerbes/migration/: Cargo.toml
cerbes/migration/src/: lib.rs  m20230215_000001_create_user_table.rs  m20230215_000002_create_credentials_table.rs  m20230215_000003_create_permissions_table.rs  m20230531_000001_alter_user_table.rs  m20230605_000001_alter_credentials_table.rs
cerbes/migrations/: env.py
cerbes/migrations/versions/: 790961452d22_initial_migration.py
cerbes/scripts/: entrypoint.sh  publish.sh
cerbes/src/: lib.rs  main.rs  settings.rs
cerbes/src/applications/: errors.rs  mod.rs
cerbes/src/domain/: errors.rs  mod.rs
cerbes/src/infrastructure/: errors.rs  mod.rs
cerbes/tests/: conftest.py  test_api.rs  test_credentials.rs  test_permissions.rs  test_users.rs  test_views.py
cerbes/tests/common/: database.rs  mod.rs  publisher.rs
gaea/: .dockerignore  .gitignore  .releaserc.json  Dockerfile  config.yaml  pyproject.toml
gaea/gaea/config/: config.py  config_2.py
gaea/gaea/database/: main.py
gaea/gaea/errors/: __init__.py
gaea/gaea/helpers/: auth.py  metaclass.py
gaea/gaea/log/: __init__.py  main.py
gaea/gaea/models/: __init__.py  apiaries.py  base.py  comments.py  events.py  hives.py  swarms.py  users.py
gaea/gaea/rbmq/: __init__.py  base.py  consumer.py  publisher.py
gaea/gaea/redis/: constants.py  messages.py
gaea/gaea/webapp/: __init__.py  main.py  monitoring.py  utils.py
gaea/migrations/: env.py  script.py.mako
gaea/migrations/versions/: 0ac840331a60_add_reset_id_field_for_credentials.py  15e923070de0_add_permissions.py  2ddfd99e0bb4_initial_migration.py  696284ff5e09_create_models.py  86c8de259097_create_models.py  8d9f03d62087_add_triggers.py  a10943d731da_add_activation_id_field_for_users.py  b9d51e232eaf_add_queen_year_column_on_swarm.py  d686c3a72adb_add_activated_field_for_users.py  e455a66e218c_create_models.py  e78fa6998a62_create_users_and_owners.py
gaea/tests/: fixtures.py  models.py  test_database.py  test_models.py  test_rbmq_consumer.py  test_rbmq_publisher.py  test_webapp.py
hermes/: .releaserc.json  Dockerfile  config.yaml  justfile  pyproject.toml  requirements.txt
hermes/hermes/: constants.py  consumer.py  controller.py
hermes/hermes/controller/: __init__.py  controller.py
hermes/hermes/email_engine/: __init__.py  email.py
hermes/hermes/templates/: reset_password.py  welcome_email.py
hermes/src/hermes/: consumer.py  zeromq.py
hermes/tests/: conftest.py  test_email_engine.py
hex/: .pylintrc  pyproject.toml
hex/domains/bee/: errors.py
infra/utils/backup/: Dockerfile  backup.py  here.txt  pyproject.toml
meltingpot/: config.yaml  pyproject.toml
meltingpot/meltingpot/config/: config_2.py
meltingpot/meltingpot/database/: __init__.py  connectors.py  main.py
meltingpot/meltingpot/errors/: __init__.py
meltingpot/meltingpot/helpers/: metaclass.py
meltingpot/meltingpot/log/: logger.py  main.py
meltingpot/meltingpot/models/: __init__.py  base.py  users.py
meltingpot/meltingpot/redis/: client.py
meltingpot/meltingpot/webapp/: __init__.py  main.py  utils.py
meltingpot/migrations/: env.py  script.py.mako
meltingpot/migrations/versions/: 0234dc2c0f19_create_users_and_owners.py  b8a3d2e9ad58_create_users_and_owners.py  e78fa6998a62_create_users_and_owners.py
meltingpot/tests/: fixtures.py  models.py  test_database.py  test_models.py
zeus/: Cargo.toml
zeus/src/: connection.rs  handler.rs  main.rs  request.rs  server.rs
zeus/src/http/: mod.rs
zeus/src/tls/: mod.rs
(+925 files in other folders)
