[tool.poetry]
name = "akingbee"
version = "0.1.0"
description = ""
authors = ["Yomain <arnal.romain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
mysql-connector = "^2.2"
pyyaml = "^5.1"
werkzeug = "^0.16.0"
peewee = "^3.11"
pymysql = "^0.9.3"
uwsgi = "^2.0"
flask-session = "^0.3.1"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pynvim = "^0.3.2"
coverage = "^4.5"
mock = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
