[tool.poetry]
name = "aristaeus"
version = "1.16.2"
description = ""
authors = ["rarnal <arnal.romain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.0"
dynaconf = "^3.1.11"
fastapi = "^0.85.1"
aiohttp = "^3.8.3"
uvicorn = "^0.19.0"
requests = "^2.28.1"
asyncpg = "^0.27.0"
anyio = "^3.6.2"
gaea = "^1.9.2"
pika = "^1.3.1"
alembic = "^1.9.1"
greenlet = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
python-lsp-server = "*"
pylsp-mypy = "*"
python-lsp-black = "*"
pyls-isort = "*"
mypy = "*"
ipdb = "*"
pytest = "*"
factory-boy = "*"
flake8 = "*"
httpx = "*"
coverage = "*"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
src_paths = ["src"]
force_single_line = true

[tool.mypy]
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
    "tests/integration",
]
