[tool.poetry]
name = "aristaeus"
version = "1.24.3"
description = ""
authors = ["rarnal <arnal.romain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.0"
dynaconf = "^3.1.11"
fastapi = "^0.85.1"
aiohttp = "^3.8.3"
uvicorn = {version = "^0.22.0", extras = ["gunicorn"]}
asyncpg = "^0.27.0"
anyio = "^3.6.2"
alembic = "^1.9.1"
gunicorn = "^20.1.0"
pyjwt = "^2.7.0"
pyzmq = "^25.1.0"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
python-lsp-server = "*"
pylsp-mypy = "*"
python-lsp-black = "*"
pyls-isort = "*"
mypy = "*"
ipdb = "*"
pytest = "*"
factory-boy = "*"
flake8 = "*"
httpx = "*"
coverage = "*"
aiosqlite = "^0.19.0"
requests = "^2.31.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
src_paths = ["src"]
force_single_line = true

[tool.mypy]
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
    "tests/integration",
]
