[package]
name = "cerbes"
version = "1.16.1"
edition = "2021"
include = ["src/**/*", "README.md"]

[workspace]
members = [".", "migration"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["headers", "macros"] }
chrono = "0.4.23"
config = "0.13.3"
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-chrono", "with-json", "with-uuid"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
tokio = { version = "1.25.0", features = ["full"] }
uuid = {version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
migration = { path = "migration" }
base64 = "0.21.0"
jsonwebtoken = "8.2.0"
async-trait = "0.1.64"
lazy_static = "1.4.0"
sea-query = "0.28.3"
amqprs = "1.1.0"
tower-http = {version = "0.4.0", features = ["cors"] }

[dev-dependencies]
hyper = "0.14.24"
sea-orm = { version = "0.11.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-chrono", "with-json", "with-uuid", "macros"] }
tower = "0.4.13"

