[tool.poetry]
name = "cerbes"
version = "1.11.5"
description = "Manage Authentication. Who better than Cerbes to guard the realm of bees ?"
authors = ["rarnal <arnal.romain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyjwt = "^2"
gaea = "^1"

[tool.poetry.dev-dependencies]
pylint = "*"
ipython = "*"
pytest = "*"
requests = "*"
black = "*"
mock = "*"
coverage = {version = "*", extras = ["toml"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
branch = true
source = ["cerbes"]
omit = ["tests"]
