[tool.poetry]
name = "cerbes"
version = "1.14.0"
description = "Manage Authentication. Who better than Cerbes to guard the realm of bees ?"
authors = ["rarnal <arnal.romain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyjwt = "^2"
gaea = "1.8.3"
alembic = "^1.9"

[tool.poetry.group.dev.dependencies]
pylint = "*"
ipython = "*"
pytest = "*"
requests = "*"
black = "*"
mock = "*"
coverage = {version = "*", extras = ["toml"]}
python-lsp-server = "^1.7.0"
pylsp-mypy = "^0.6.4"
pyls-isort = "^0.2.2"
python-lsp-black = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["cerbes"]
omit = ["tests"]
