[tool.poetry]
name = "gaea"
version = "1.9.1"
description = "A microservice chassis for akingbee.com !"
authors = ["rarnal <arnal.romain@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
redis = "^3"
sqlalchemy = ">=1"
dynaconf = "^3"
alembic = "^1"
psycopg2-binary = "^2"
fastapi = ">=0.65.2"
uvicorn = ">=0.11.7"
pika = "^1"
pydantic = "^1"
aiohttp = "^3.7.4"
starlette = "==0.14.2"

[tool.poetry.dev-dependencies]
pylint = "*"
alembic = "*"
black = "*"
pytest = "*"
mock = "*"
coverage = {version = "^5.4", extras = ["toml"]}
requests = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
branch = true
source = ["gaea"]
omit = ["tests"]

