[tool.poetry]
name = "hermes"
version = "1.1.2"
description = "Hermes, the messenger of Gods !"
authors = ["Yomain <arnal.romain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gaea = "^1.6.6"

[tool.poetry.dev-dependencies]
pytest = "*"
ipython = "*"
pylint = "*"
black = "*"
pynvim = "*"
coverage = {version = "*", extras = ["toml"]}
ipdb = "*"
mock = "^4.0.3"

[tool.coverage.run]
branch = true
source = ["hermes"]
omit = ["tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


