[tool.poetry]
name = "hermes"
version = "1.4.1"
description = "Hermes, the messenger of Gods !"
authors = ["Yomain <arnal.romain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
gaea = "^1.8.3"
pyzmq = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ipython = "*"
pylint = "*"
black = "*"
pynvim = "*"
coverage = {version = "*", extras = ["toml"]}
ipdb = "*"
mock = "^4.0.3"

[tool.coverage.run]
branch = true
source = ["hermes"]
omit = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
