[tool.poetry]
name = "meltingpot"
version = "0.1.0"
description = ""
authors = ["rarnal <arnal.romain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
sqlalchemy = "^1.3.18"
alembic = "^1.4.2"
dynaconf = "^3.0.0"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
alembic = "^1.4.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
