[package]
name = "zeus"
version = "0.1.0"
authors = ["rarnal <arnal.romain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "^0.8", features = ["os-poll", "net"] }
rustls = "^0.20"
rustls-pemfile = "^0.3"
webpki-roots = "^0.22"
