[tool.poetry]
name = "backup-db"
version = "0.1.0"
description = ""
authors = ["rarnal <arnal.romain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.9.0"
google-auth = "^1.31.0"
google-auth-oauthlib = "^0.4.4"
google-auth-httplib2 = "^0.1.0"
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
